ros2_tutorial_workspace/log/build_2024-10-18_14-28-35/custom_publisher_package/stdout_stderr.log
running egg_info
writing ../../build/custom_publisher_package/custom_publisher_package.egg-info/PKG-INFO
writing dependency_links to ../../build/custom_publisher_package/custom_publisher_package.egg-info/dependency_links.txt
writing entry points to ../../build/custom_publisher_package/custom_publisher_package.egg-info/entry_points.txt
writing requirements to ../../build/custom_publisher_package/custom_publisher_package.egg-info/requires.txt
writing top-level names to ../../build/custom_publisher_package/custom_publisher_package.egg-info/top_level.txt
reading manifest file '../../build/custom_publisher_package/custom_publisher_package.egg-info/SOURCES.txt'
writing manifest file '../../build/custom_publisher_package/custom_publisher_package.egg-info/SOURCES.txt'
running build
running build_py
copying custom_publisher_package/custom_publisher_node.py -> /home/delewlew/ros2_tutorial_workspace/build/custom_publisher_package/build/lib/custom_publisher_package
running install
running install_lib
copying /home/delewlew/ros2_tutorial_workspace/build/custom_publisher_package/build/lib/custom_publisher_package/custom_publisher_node.py -> /home/delewlew/ros2_tutorial_workspace/install/custom_publisher_package/lib/python3.10/site-packages/custom_publisher_package
byte-compiling /home/delewlew/ros2_tutorial_workspace/install/custom_publisher_package/lib/python3.10/site-packages/custom_publisher_package/custom_publisher_node.py to custom_publisher_node.cpython-310.pyc
running install_data
  File "/home/delewlew/ros2_tutorial_workspace/install/custom_publisher_package/lib/python3.10/site-packages/custom_publisher_package/custom_publisher_node.py", line 1
    import String from example_interfaces.msg
                  ^^^^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/delewlew/ros2_tutorial_workspace/install/custom_publisher_package/lib/python3.10/site-packages/custom_publisher_package-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/custom_publisher_package/custom_publisher_package.egg-info to /home/delewlew/ros2_tutorial_workspace/install/custom_publisher_package/lib/python3.10/site-packages/custom_publisher_package-0.0.0-py3.10.egg-info
running install_scripts
Installing custom_publisher_node script to /home/delewlew/ros2_tutorial_workspace/install/custom_publisher_package/lib/custom_publisher_package
writing list of installed files to '/home/delewlew/ros2_tutorial_workspace/build/custom_publisher_package/install.log'
